--- a/favorite-music-album.html
+++ b/favorite-music-album.html
@@ -2,16 +2,87 @@
 <html>
 <head>
 	<title></title>
+
+<style type="text/css">
+
+	#one
+	{
+
+		width:1550px ;
+		height:100px ;
+		border:10px solid white;
+	
+		font-family: cursive;
+	}
+
+	#two
+	{
+
+		font-family: cursive;
+		top: 120px;
+		left: 300px;
+		
+
+
+	}
+
+
+
+	li
+	{
+
+		font-family: courier new;
+		font-size: 18px;
+		color: grey; 
+
+
+	}
+
+	</style>
+
+	<style>
+
+	body {
+
+		background-color: pink;
+
+	}
+
+		tr{
+
+		font-family: courier new;
+		font-size: 18px;
+		color: grey; 
+
+
+		}	
+
+
+		img{
+
+			position: absolute;
+			left:500px;
+			top:179px;
+		}
+		
+
+	</style>
+
 </head>
 
-	<H1><b><u>My Everything</b></u></H1></br>
 
-	<h2><u>Ariana Grande</u></h2></br>
+</style>
+
+	<div id="one"><H1><b><u>My Everything</b></u></H1></br></div>
+
+	<div id="two"><h2><u>Ariana Grande</u></h2></br></div>
 
 	<img src="https://images-na.ssl-images-amazon.com/images/I/71IFgFKh%2B0L._SL1428_.jpg" width="300"></br>
 
 <body>
 
+
+<p>
 
 	<ul>
 		<li>Track 1 :	Intro</li></br>
@@ -44,7 +115,7 @@
 
 				<table border="10px">
 
-				<tr bgcolor="pink">
+				<tr bgcolor="grey">
 
 					<td>Year</td>
 					<td>Album Title</td>
@@ -88,7 +159,7 @@
 			<td>2015</td>
 			<td>Christmas and Chill</td>
 
-		</tr>>
+		</tr>
 
 		<tr>
 			
@@ -98,16 +169,39 @@
 		</tr>
 
 
+		<style type="text/css"> 
+
+
+
+				#two{
+
+					position: absolute;
+					left: 24px;
+					top:93px;
+					border:none;
+				}
+
+
+
+
+		</style>
+
+
+		<div id="two"><a href="https://www.arianagrande.com/">Official Website</a></br></div>
+
+</p>
+
 		<a href="https://twitter.com/ArianaGrande?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">Click Here to go to Twitter</a></br>
+		</br>
 
 		<a href="https://twitter.com/ArianaGrande?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">Click Here to go to Instagram</a></br>
+		</br>
 
 		<a href="https://www.facebook.com/arianagrande/">Click Here to go to Facebook</a></br>
+		</br>
 
+		
 
 </body>
-
-	</p>
-
 
 </html>
