--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <div class="container">
 	
 
-<a href = "#" class = "navbar-brand">The Cheeseckae Factory's Official Website</a>
-<button class = "navbar-toggle" data-toggle = "collapse" data-target = ".navHeaderCollapse">
+<a href = "#" class = "navbar-brand">Disney</a>
+<button class = "navbar-toggle" data-toggle = "collapse" data-target = ".navHeaderCollapse" 
 		
 		<span class = "icon-bar"></span>
 		<span class = "icon-bar"></span>
@@ -29,7 +29,8 @@
 <ul class = "nav navbar-nav navbar-right">
 		
 	<li class="active"><a href = "#">Home</a></li>
-	<li><a href = "#">Menu</a></li>
+	<li><a href = "#">Parks & Travel</a></li>
+	<li><a href = "#">Store</a></li>
 	<li class="dropdown">
 
 	<a href="#" class="dropdown-toggle" data-toggle = "dropdown">Social Media <b class = "caret"></b></a>
@@ -45,8 +46,8 @@
 	</ul>
 	</li>
 
-	<li><a href = "#">Locations</a></li>
-	<li><a href = "#contact" data-toggle = "modal">Contact</a></li>
+	<li><a href = "#">Videos</a></li>
+	<li><a href = "#contact" data-toggle = "modal">Contact Us</a></li>
 
 	</ul>
 
@@ -60,12 +61,53 @@
 	<div class="container">
 		
 	<div class="jumbotron text-center">
+	<div id  = "myCarousel" class = "carousel slide">
 		
-	<h1><img src="img/CheesecakeFactoryLogo-e1409662372225.png"></h1>
+	<ol class="carousel-indicators">
+		<li data-target = "#myCarousel" data-slide-to = "0" class="active"></li>
+		<li data-target = "#myCarousel" data-slide-to = "1"></li>
+		<li data-target = "#myCarousel" data-slide-to = "2"></li>
+	</ol>
 
-		<p>LAKJSHDJafhslfhLJjbdljghadlsjh</p>
-		<a class = "btn btn-default">Order Now!</a>
-		<a class = "btn btn-info">Tweet it!</a>
+	<div class="carousel-inner">
+		
+	<div class="item active">
+		
+	<img src="img/disney.wdp.jxr" class="img-responsive" width="100%">
+	</div>
+
+	<div class="item">
+		
+	<img src="img/park.jpg" class="img-responsive" width="100%">
+	</div>
+
+	<div class="item ">
+		
+	<img src="img/world.jpg" class="img-responsive" width="100%">
+	</div>
+
+	</div>
+
+<a class="carousel-contro left" href = "myCarousel" data-slide = "prev">
+<span class = "icon-prev"></span>
+</a>
+
+<a class="carousel-contro right" href = "myCarousel" data-slide = "next">
+<span class = "icon-next"></span>
+</a>
+
+
+	</div>	
+
+
+
+	</div>
+		
+
+		<p>Go Back To Where Your Childhood Awaits You! </p>
+		<a class = "btn btn-success">Book Your Trip Now!</a>
+		</br>
+		
 
 	</div>
 
@@ -80,27 +122,33 @@
 
 			<div class = " col-md-3">
 		
-				<h3><a href="#">$500 Gaming PC Build</a></h3>
-				<p>hola mellamo alicial y me gusta bilar co teh engo u perqure no me gusta marxco, porwue el no le gsuta bilar y el prefiere wur trbajar blalalalalalalalallalalalalal and mor emrome rmeom and mor eblah hahahaha just an exmaple to put as my paragrahs not what ill actualyl put, sorry.</p>
+				<h3><a href="#">Disney Resort in Florida</a>
+</h3>
+				<p>Our resorts range from a variety of options and can be simply done by going through our system’s booking site. You are just clicks away from being on the vacation of your dreams. Want to know more? Click here and booking your Disney experience in our resort in Florida will be as quick and hassle free! 
+</p>
 				<a href = "#" class = "btn btn-default">Read More</a>
 				</div>
 
 	<div class = " col-md-3">
 
-	<h3><a href="#">$500 Gaming PC Build</a></h3>
-				<p>hola mellamo alicial y me gusta bilar co teh engo u perqure no me gusta marxco, porwue el no le gsuta bilar y el prefiere wur trbajar blalalalalalalalallalalalalal and mor emrome rmeom and mor eblah hahahaha just an exmaple to put as my paragrahs not what ill actualyl put, sorry.</p>
+	<h3><a href="#">Disney Resort in California</a></h3>
+				<p>Our resort in California are filled with sunshine and magic. Click here to book your once in a lifetime experience of going back to meet your childhood. Be a kid again and allow your kids to roam free with just a few easy clicks. Want to know how to book your trip? Simple, just click here and we will direct you to our booking site! So what are you waiting for? Start booking!
+
+</p>
 				<a href = "#" class = "btn btn-default">Read More</a>
 				</div>
 			<div class = " col-md-3">
 				
-					<h3><a href="#">$500 Gaming PC Build</a></h3>
-				<p>hola mellamo alicial y me gusta bilar co teh engo u perqure no me gusta marxco, porwue el no le gsuta bilar y el prefiere wur trbajar blalalalalalalalallalalalalal and mor emrome rmeom and mor eblah hahahaha just an exmaple to put as my paragrahs not what ill actualyl put, sorry.</p>
+					<h3><a href="#">Different Attractions to Vist</a></h3>
+				<p>In each and every one of out theme parks, we have tons of different activities for you to do. But do not worry, we have it all nice and organize for you to browse, just click here and wait to be presented with a whole new world!
+</p>
 				<a href = "#" class = "btn btn-default">Read More</a>
 				</div>
 				<div class = " col-md-3">
 
-					<h3><a href="#">$500 Gaming PC Build</a></h3>
-				<p>hola mellamo alicial y me gusta bilar co teh engo u perqure no me gusta marxco, porwue el no le gsuta bilar y el prefiere wur trbajar blalalalalalalalallalalalalal and mor emrome rmeom and mor eblah hahahaha just an exmaple to put as my paragrahs not what ill actualyl put, sorry.</p>
+					<h3><a href="#">More Reservations </a></h3>
+				<p>Within our resorts, we have lots of special offers for you to choose from. Booking early, you can come to our parks prepared and relaxed, for we have your back. Want to learn on how you can book these special offers, to guarantee that your visit at Disney will be filled fun and hassle free? Click here to be directed to our special booking site!
+</p>
 				<a href = "#" class = "btn btn-default">Read More</a>
 			</div>
 
@@ -115,7 +163,7 @@
 
 		<div class = "container">
 		<p class = "navbar-text pull-left">Site Built By Sana U</p>		
-		<a href="#" class="navbar-btn btn-danger btn pull-right">Subscribe on Youtube</a>
+		<a href="https://www.youtube.com/user/disneysshows" class="navbar-btn btn-danger btn pull-right">Subscribe on Youtube</a>
 		</div>
 
 	</div>
