--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Bootstrap 3 </title>
+	<title>Disney Officical Website</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/styles.css" rel="stylesheet">
@@ -73,17 +73,17 @@
 		
 	<div class="item active">
 		
-	<img src="img/disney.wdp.jxr" class="img-responsive" width="100%">
+	<img src="img/magicmouse.jpg" class="img-responsive" width="100%">
 	</div>
 
 	<div class="item">
 		
-	<img src="img/park.jpg" class="img-responsive" width="100%">
+	<img src="img/castle.jpg" class="img-responsive" width= "100%">
 	</div>
 
 	<div class="item ">
 		
-	<img src="img/world.jpg" class="img-responsive" width="100%">
+	<img src="img/family.jpg" class="img-responsive" width="100%">
 	</div>
 
 	</div>
@@ -103,10 +103,10 @@
 
 	</div>
 		
+	<h1><img src="img/magicmouse.jpg"></h1>
 
 		<p>Go Back To Where Your Childhood Awaits You! </p>
 		<a class = "btn btn-success">Book Your Trip Now!</a>
-		</br>
 		
 
 	</div>
