--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
 
 	<div class="item">
 		
-	<img src="img/castle.jpg" class="img-responsive" width= "100%">
+	<img src="img/frozen.jpg" class="img-responsive" width= "100%">
 	</div>
 
 	<div class="item ">
 		
-	<img src="img/family.jpg" class="img-responsive" width="100%">
+	<img src="img/playing.jpg" class="img-responsive" width="100%">
 	</div>
 
 	</div>
@@ -103,7 +103,6 @@
 
 	</div>
 		
-	<h1><img src="img/magicmouse.jpg"></h1>
 
 		<p>Go Back To Where Your Childhood Awaits You! </p>
 		<a class = "btn btn-success">Book Your Trip Now!</a>
