--- a/read.html
+++ b/read.html
@@ -28,7 +28,7 @@
 
 <ul class = "nav navbar-nav navbar-right">
 		
-	<li><a href = "#">Home</a></li>
+	<li><a href = "https://1011171.github.io/26i-lyrics/index.html#contact">Home</a></li>
 	<li class="active"><a href = "#">Parks & Travel</a></li>
 	<li><a href = "#">Store</a></li>
 
